update project sections

--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
                     </a>
               </div>
           
+              <div class="project-card">
+                  <a href="https://github.com/nindyahapsari/personal_website" target="_blank" rel="noopener noreferrer">
+                      <img class="project-img" id="website" src="images/landingpageScreenshot.png" width="190" height="150" alt="personal website screenshot">
+                      <p class="project-text" id="personalwebtext">Personal Website <br> HTML CSS JS</p>
+                    </a>
+              </div>
+
           
               <div class="project-card">
                   <a href="https://github.com/nindyahapsari/BubTeaApp" target="_blank" rel="noopener noreferrer">
