update style effect and live server ready also tested

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>nindyahapsari</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+  <link rel="icon" type="image/ico" href="images/logo.png" />
+
 <!--styles-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -62,7 +64,7 @@
     <div class="flex-container" id="container-skills">
 
       <div class="every-skill-box" data-aos="fade-up-right" data-aos-duration="3000" id="programming-language" >
-          <h2 class="skills-title" id="program-lang">Programming Language</h2>
+          <h2 class="skills-title programlanguage" id="program-lang">Programming Language</h2>
           <ul class="skill-list">
               <li>HTML - CSS</li>
               <li>Java Script</li>
@@ -71,7 +73,7 @@
             </ul>
       </div>
       <div class="every-skill-box" data-aos="fade-down-right" data-aos-duration="3000" id="tools-library">
-          <h2 class="skills-title" id="tools-lib">Tools and Library</h2>
+          <h2 class="skills-title toolslib" id="tools-lib">Tools and Library</h2>
           <ul class="skill-list">
               <li>Git</li>
               <li>VScode</li>
@@ -85,13 +87,13 @@
             </ul>
       </div>
       <div class="every-skill-box" data-aos="fade-down-left" data-aos-duration="3000" id="softwares">
-          <h2 class="skills-title" id="titlesoftwares">Softwares</h2>
+          <h2 class="skills-title softwaretitle" id="titlesoftwares">Softwares</h2>
           <ul class="skill-list">
               <li>Adobe XD</li>
             </ul>
       </div>
       <div class="every-skill-box" data-aos="fade-up-left" data-aos-duration="3000" id="human-language">
-          <h2 class="skills-title" id="language">Human Language</h2>
+          <h2 class="skills-title humlangtitle" id="language">Human Language</h2>
           <ul class="skill-list">
               <li>English</li>
               <li>Indonesian</li>
