update bg and css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" >
 
+
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>nindyahapsari</title>
   <link rel="icon" type="image/ico" href="images/logo.png" />
@@ -26,7 +28,7 @@
 
 <body>
     
-  <div id="wrapper">
+  <div id="wrapper-website">
     <div class="container-fluid" id="home-container">
       <h1 class="animated bounceInLeft" id="header-name">Nindya Hapsari</h1>
   <nav class="navbar navbar-light animated bounceInDown" id="navbar">
@@ -106,9 +108,9 @@
 
     <div class="container-work" id="container-work">
 
-        <h1 data-aos="zoom-out-up" data-aos-duration="2000" id="project-head"><i class="fa fa-laptop-code" style="font-size: 3vw;"></i>Projects</h1>
+        <h1 data-aos="zoom-out-up" data-aos-duration="1000" id="project-head"><i class="fa fa-laptop-code" style="font-size: 3vw;"></i>Projects</h1>
 
-          <div data-aos="flip-up" data-aos-duration="2500" class="card-wrapper" id="card-wrapper">
+          <div data-aos="flip-up" data-aos-duration="1000" class="card-wrapper" id="card-wrapper">
             <div class="project-card">
                 <a href="https://github.com/nindyahapsari/WeatherApp_Sunshine" target="_blank" rel="noopener noreferrer">
                     <img class="project-img" id="weatherapp" src="images/weather_first.png" alt="weather app screenshot">
