update project site

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
                       <p class="project-text" id="rqmtext">Random Quote Machine <br> HTML CSS JS</p>
                     </a>
               </div>
+
+              <div class="project-card">
+                <a href="https://codepen.io/nindyahapsari/full/xewbzr" target="_blank" rel="noopener noreferrer">
+                    <img class="project-img" id="drum_machine" src="images/drum_machine.png" width="190" height="150" alt="personal website screenshot">
+                    <p class="project-text" id="dmtext">Drum Machine<br> HTML CSS JS </p>
+                  </a>
+            </div>
           </div>
       
 
